--- a/ch-pcc-/build.xml
+++ b/ch-pcc-/build.xml
@@ -10,20 +10,15 @@
 		<property name="ig" value="cda-ch-pcc" />
 		<property name="canonicalBase" value="http://fhir.ch/ig/${ig}" />
 		<property name="prefix" value="ch-pcc-" />
+
+		<property name="projectUriChEpr" value="../ch-epr-/artdecor/project.xml" />
+    <property name="in" value="artdecor/project.xml" />
+    <property name="out" value="project.log" />
+
 	</target>
 
-	<target name="clean">
-		<delete dir="artdecor" />
-		<delete dir="resources" />
-		<delete dir="output" />
-	</target>
 
-	<target name="default" depends="init">
-
-		<antcall target="artDecorProjectDownload">
-			<param name="prefix" value="${prefix}" />
-		</antcall>
-
+	<target name="default" depends="init,download,artDecorToIg">
 	</target>
 
 </project>
