--- a/IHE-PCC-/build.xml
+++ b/IHE-PCC-/build.xml
@@ -10,28 +10,18 @@
 		<property name="ig" value="cda-ihe-pcc" />
 		<property name="canonicalBase" value="http://fhir.ch/ig/${ig}" />
 		<property name="prefix" value="IHE-PCC-" />
-	</target>
 
-	<target name="clean">
-		<delete dir="artdecor" />
-		<delete dir="resources" />
-		<delete dir="output" />
-	</target>
+		<property name="projectUriChEpr" value="../ch-epr-/artdecor/project.xml" />
+    <property name="projectUriSkip" value="../${prefix}/projectskip.xml" />
 
-	<target name="getTemplate" depends="init">
-		<get src="https://art-decor.ihe-europe.net/decor/services/RetrieveTemplate?format=xml&amp;prefix=${prefix}&amp;id=${templateId}&amp;effectiveDate=dynamic" dest="templates/${templateId}.xml" skipexisting="true" />
-	</target>
-
-	<target name="getProjectIndex" depends="init">
-		<get src="https://art-decor.ihe-europe.net/decor/services/ProjectIndex?format=xml&amp;prefix=${prefix}&amp;effectiveDate=dynamic" dest="artdecor/project.xml" />
-	</target>
-
-	<target name="default" depends="init">
-
-		<antcall target="artDecorProjectDownload">
-			<param name="prefix" value="${prefix}" />
-		</antcall>
+    <property name="in" value="artdecor/project.xml" />
+    <property name="out" value="project.log" />
+    <property name="decorservice" value="https://art-decor.ihe-europe.net/decor/services" />
 
 	</target>
+
+	
+	 <target name="default" depends="init,download,artDecorToIg">
+	  </target>
 
 </project>
