--- a/xslt/build.xml
+++ b/xslt/build.xml
@@ -27,11 +27,11 @@
 	</target>
 
 	<target name="getProjectIndex" depends="init">
-		<get src="http://art-decor.org/decor/services/ProjectIndex?format=xml&amp;prefix=${prefix}&amp;effectiveDate=dynamic" dest="artdecor/project.xml" />
+		<get src="${decorservice}/ProjectIndex?format=xml&amp;prefix=${prefix}&amp;effectiveDate=dynamic" dest="artdecor/project.xml" />
 	</target>
 
 	<target name="getTemplate" depends="init">
-		<get src="http://art-decor.org/decor/services/RetrieveTemplate?format=xml&amp;prefix=${prefix}&amp;id=${templateId}&amp;effectiveDate=dynamic" dest="templates/${templateId}.xml" skipexisting="true" />
+		<get src="${decorservice}/RetrieveTemplate?format=xml&amp;prefix=${prefix}&amp;id=${templateId}&amp;effectiveDate=dynamic" dest="templates/${templateId}.xml" skipexisting="true" />
 	</target>
 
 	<target name="artDecorProjectDownload" depends="init">
@@ -50,6 +50,8 @@
 				<pathelement location="../saxon9he.jar" />
 			</classpath>
 			<param name="prefix" expression="${prefix}" type="STRING" />
+      <param name="decorservice" expression="${decorservice}" type="STRING" />
+      <param name="removePrefix" expression="${removePrefix}" type="STRING" />
 		</xslt>
 	</target>
 
@@ -68,6 +70,10 @@
 			<param name="projectUriChEpr" expression="${projectUriChEpr}" type="STRING" />
 			<param name="canonicalBase" expression="${canonicalBase}" type="STRING" />
 			<param name="language" expression="${canonicalBase}" type="STRING" />
+      <param name="decorservice" expression="${decorservice}" type="STRING" />
+		  <param name="canonicalCda" expression="${canonicalCda}" type="STRING" />
+      <param name="removePrefix" expression="${removePrefix}" type="STRING" />
+
 		</xslt>
 		<!-- stupid  nfhir: prefix due to xslt -->
 		<replace dir="resources" token="fhir:" value="">
