fix for slicing

--- a/cdach-sandbox-/build.xml
+++ b/cdach-sandbox-/build.xml
@@ -13,7 +13,13 @@
 
 		<property name="projectUri" value="../${prefix}/artdecor/project.xml" />
 		<property name="projectUriSkip" value="../${prefix}/projectskip.xml" />
-
+    <property name="decorservice" value="http://art-decor.org/decor/services" />
+    <property name="canonicalCda" value="http://fhir.ch/ig/cda-r2" />
+		
+    <property name="in" value="artdecor/project.xml" />
+    <property name="out" value="project.log" />
+    <property name="removePrefix" value="CDA" />
+		
 	</target>
 
 	<target name="clean">
@@ -22,11 +28,8 @@
 		<delete dir="output" />
 	</target>
 
-	<target name="download" depends="init">
-		<antcall target="artDecorProjectDownload">
-			<param name="prefix" value="${prefix}" />
-		</antcall>
-	</target>
+  <target name="default" depends="init,download,artDecorToIg">
+  </target>
 
 
 </project>
