--- a/ch-epr-/build.xml
+++ b/ch-epr-/build.xml
@@ -8,6 +8,7 @@
     <property name="ig" value="ch-epr-term" />
 		<property name="canonicalBase" value="http://fhir.ch/ig/${ig}" />
 		<property name="prefix" value="ch-epr-" />
+		<property name="version" value="20200226180620" />		
 	</target>
 
 	<target name="clean">
@@ -27,6 +28,8 @@
 			<param name="codeSystem" expression="${codeSystem}" type="STRING" />
 			<param name="name" expression="${name}" type="STRING" />
 			<param name="title" expression="${title}" type="STRING" />
+			<param name="sourceUri" expression="${sourceUri}" type="STRING" />
+			<param name="targetUri" expression="${targetUri}" type="STRING" />
 		</xslt>
 	</target>
 	<target name="transform" depends="init">
@@ -40,6 +43,8 @@
 			<param name="codeSystem" value="${codeSystem}" />
 			<param name="name" value="${name}" />
 			<param name="title" value="${title}" />
+			<param name="sourceUri" value="${sourceUri}" />
+			<param name="targetUri" value="${targetUri}" />
 		</antcall>
 		<!-- stupid  nfhir: prefix due to xslt -->
 		<replace file="output/${resourceId}.xml" token="fhir:" value="" />
@@ -49,7 +54,10 @@
 		<replace file="output/${resourceId}.xml" token=" xmlns:xs=&quot;http://www.w3.org/2001/XMLSchema&quot;" value="" />
 	</target>
 	<target name="getValueSet" depends="init">
-		<get src="http://art-decor.org/fhir/4.0/ch-epr-/ValueSet/${templateId}" dest="artdecor/${templateId}.xml" skipexisting="true" />
+		<get src="http://art-decor.org/fhir/4.0/ch-epr-${version}/ValueSet/${templateId}" dest="artdecor/${templateId}.xml" skipexisting="true" />
+	</target>
+	<target name="getArtDecorValueSet" depends="init">
+		<get src=" http://art-decor.org/decor/services/RetrieveValueSet?format=xml&amp;prefix=ch-epr-&amp;id=${templateId}&amp;effectiveDate=dynamic" dest="artdecor/${templateId}.xml" skipexisting="true" />
 	</target>
 	<target name="transformValueSet" depends="init">
 		<antcall target="getValueSet">
@@ -101,12 +109,28 @@
 			<param name="name" value="${name}" />
 			<param name="title" value="${title}" />
 		</antcall>
-		<copy file="output/${resourceId}.xml" tofile="../resources/codesystem/${resourceId}.xml" />
+		<copy file="output/${resourceId}.xml" tofile="resources/codesystem/${resourceId}.xml" />
 	</target>
+	<target name="transformValueSetToConceptMap" depends="init">
+			<antcall target="getArtDecorValueSet">
+				<param name="templateId" value="${templateId}" />
+			</antcall>
+			<antcall target="transform">
+				<param name="xsl" value="convertArtDecorValueSetToConceptMap.xsl" />
+				<param name="templateId" value="${templateId}" />
+				<param name="resourceId" value="${resourceId}" />
+				<param name="codeSystem" value="${codeSystem}" />
+				<param name="name" value="${name}" />
+				<param name="title" value="${title}" />
+				<param name="sourceUri" value="${sourceUri}" />
+				<param name="targetUri" value="${targetUri}" />
+			</antcall>
+			<copy file="output/${resourceId}.xml" tofile="resources/conceptmap/${resourceId}.xml" />
+	</target>		
 	<target name="ch-ehealth-codesystem-role" depends="init">
 		<antcall target="transformValueSetToCodeSystem">
 			<param name="resourceId" value="2.16.756.5.30.1.127.3.10.6" />
-			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.1.3" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.1" />
 			<param name="codeSystem" value="2.16.756.5.30.1.127.3.10.6" />
 			<param name="name" value="ChEhealthCodesystemRole" />
 			<param name="title" value="ch-ehealth-codesystem-role" />
@@ -136,6 +160,33 @@
 			<param name="codeSystem" value="2.16.756.5.30.1.127.3.6" />
 			<param name="name" value="ChEhealthCodesystemNareg" />
 			<param name="title" value="ch-ehealth-codesystem-nareg" />
+		</antcall>
+	</target>
+	<target name="ch-ehealth-codesystem-purposeOfUse" depends="init">
+		<antcall target="transformValueSetToCodeSystem">
+			<param name="resourceId" value="2.16.756.5.30.1.127.3.10.5" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.2" />
+			<param name="codeSystem" value="2.16.756.5.30.1.127.3.10.5" />
+			<param name="name" value="ChEhealthCodesystemPurposeOfUse" />
+			<param name="title" value="ch-ehealth-codesystem-purposeOfUse" />
+		</antcall>
+	</target>
+	<target name="ch-ehealth-codesystem-agentRole" depends="init">
+		<antcall target="transformValueSetToCodeSystem">
+			<param name="resourceId" value="2.16.756.5.30.1.127.3.10.14" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.1" />
+			<param name="codeSystem" value="2.16.756.5.30.1.127.3.10.14" />
+			<param name="name" value="ChEhealthCodesystemAgentRole" />
+			<param name="title" value="ch-ehealth-codesystem-agentRole" />
+		</antcall>
+	</target>
+	<target name="ch-ehealth-codesystem-atc" depends="init">
+		<antcall target="transformValueSetToCodeSystem">
+			<param name="resourceId" value="2.16.756.5.30.1.127.3.10.7" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.2" />
+			<param name="codeSystem" value="2.16.756.5.30.1.127.3.10.7" />
+			<param name="name" value="ChEhealthCodesystemAtc" />
+			<param name="title" value="ch-ehealth-codesystem-atc" />
 		</antcall>
 	</target>
 	<target name="3_2.2_ValueSet_DocumentEntry.authorSpeciality" depends="init">
@@ -274,6 +325,34 @@
 			<param name="title" value="SubmissionSet.Author.AuthorRole" />
 		</antcall>
 	</target>
+	<target name="5_1_ValueSet_EprPurposeOfUse" depends="init">
+		<antcall target="transformValueSet">
+			<param name="resourceId" value="EprPurposeOfUse" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.2" />
+			<param name="title" value="EprPurposeOfUse" />
+		</antcall>
+	</target>
+	<target name="5_2_ValueSet_EprAgentRole" depends="init">
+		<antcall target="transformValueSet">
+			<param name="resourceId" value="EprAgentRole" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.1" />
+			<param name="title" value="EprAgentRole" />
+		</antcall>
+	</target>
+	<target name="5_2_ValueSet_EprRole" depends="init">
+		<antcall target="transformValueSet">
+			<param name="resourceId" value="EprRole" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.1" />
+			<param name="title" value="EprRole" />
+		</antcall>
+	</target>
+	<target name="5_2_ValueSet_EprAuditTrailConsumptionEventType" depends="init">
+		<antcall target="transformValueSet">
+			<param name="resourceId" value="EprAuditTrailConsumptionEventType" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.2" />
+			<param name="title" value="EprAuditTrailConsumptionEventType" />
+		</antcall>
+	</target>
 	<target name="9_2.1_ValueSet_HCProfessional.hcProfession" depends="init">
 		<antcall target="transformValueSet">
 			<param name="resourceId" value="HCProfessional.hcProfession" />
@@ -289,10 +368,20 @@
 		</antcall>
 	</target>
 	
+	<target name="DocumentEntryClassCodeToDocumentEntryTypeCode" depends="init">
+		<antcall target="transformValueSetToConceptMap">
+			<param name="resourceId" value="DocumentEntryClassCodeToDocumentEntryTypeCode" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.30" />
+			<param name="title" value="DocumentEntryClassCodeToDocumentEntryTypeCode" />
+			<param name="name" value="DocumentEntryClassCodeToDocumentEntryTypeCode" />
+			<param name="sourceUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/DocumentEntry.classCode" />
+			<param name="targetUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/DocumentEntry.typeCode" />
+		</antcall>
+	</target>
 	
 	
 	<target name="dist" depends="init">
-	    <copy todir="../../${ig}/resources">
+	    <copy todir="../../${ig}/input/resources">
 	      <fileset dir="resources">
 	        <include name="**/*.xml" />
 	      </fileset>
@@ -320,9 +409,20 @@
 		<antcall target="3_2.13_ValueSet_DocumentEntry.mimeType" />
 		<antcall target="3_2.14_ValueSet_SubmissionSet.contentTypeCode" />
 		<antcall target="3_2.15_ValueSet_SubmissionSet.Author.AuthorRole" />
+		
+		<antcall target="ch-ehealth-codesystem-purposeOfUse" />
+		<antcall target="5_1_ValueSet_EprPurposeOfUse" />
+		<antcall target="ch-ehealth-codesystem-agentRole" />
+		<antcall target="5_2_ValueSet_EprAgentRole" />
+		<antcall target="5_2_ValueSet_EprRole" />
+		<antcall target="ch-ehealth-codesystem-atc" />
+		<antcall target="5_2_ValueSet_EprAuditTrailConsumptionEventType" />
+		
 		<antcall target="9_2.1_ValueSet_HCProfessional.hcProfession" />
 		<antcall target="9_2.2_ValueSet_HCProfessional.hcSpecialisation" />
 		<antcall target="ch-ehealth-codesystem-hpd" />
+		
+		<antcall target="DocumentEntryClassCodeToDocumentEntryTypeCode" />		
 
 	</target>
 </project>
