--- a/ch-epr-/build.xml
+++ b/ch-epr-/build.xml
@@ -378,8 +378,18 @@
 			<param name="targetUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/DocumentEntry.typeCode" />
 		</antcall>
 	</target>
-	
-	
+
+	<target name="HCProfessionalHCProfessionSpecialisationMap" depends="init">
+		<antcall target="transformValueSetToConceptMap">
+			<param name="resourceId" value="HCProfessionalHCProfessionSpecialisationMap" />
+			<param name="templateId" value="2.16.756.5.30.1.127.3.10.8.3" />
+			<param name="title" value="HCProfessionalHCProfessionSpecialisationMap" />
+			<param name="name" value="HCProfessionalHCProfessionSpecialisationMap" />
+			<param name="sourceUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/HCProfessional.hcProfession" />
+			<param name="targetUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/HCProfessional.hcSpecialisation" />
+		</antcall>
+	</target>
+		
 	<target name="dist" depends="init">
 	    <copy todir="../../${ig}/input/resources">
 	      <fileset dir="resources">
@@ -423,6 +433,7 @@
 		<antcall target="ch-ehealth-codesystem-hpd" />
 		
 		<antcall target="DocumentEntryClassCodeToDocumentEntryTypeCode" />		
+		<antcall target="HCProfessionalHCProfessionSpecialisationMap" />		
 
 	</target>
 </project>
