--- a/ch-epr-/build.xml
+++ b/ch-epr-/build.xml
@@ -68,6 +68,7 @@
 			<param name="templateId" value="${templateId}" />
 			<param name="resourceId" value="${resourceId}" />
 			<param name="title" value="${title}" />
+			<param name="name" value="${name}" />
 		</antcall>
 		<copy file="output/${resourceId}.xml" tofile="resources/valueset/${resourceId}.xml" />
 	</target>
@@ -80,6 +81,7 @@
 			<param name="templateId" value="${templateId}" />
 			<param name="resourceId" value="${resourceId}" />
 			<param name="title" value="${title}" />
+			<param name="name" value="${name}" />
 		</antcall>
 		<copy file="output/${resourceId}.xml" tofile="resources/valueset/${resourceId}.xml" />
 	</target>
@@ -141,6 +143,7 @@
 			<param name="resourceId" value="DocumentEntry.authorRole" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.1.3" />
 			<param name="title" value="DocumentEntry.authorRole" />
+			<param name="name" value="DocumentEntryAuthorRole" />
 		</antcall>
 	</target>
 	<target name="ch-ehealth-codesystem-medreg" depends="init">
@@ -194,6 +197,7 @@
 			<param name="resourceId" value="DocumentEntry.authorSpeciality" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.1.4" />
 			<param name="title" value="DocumentEntry.authorSpeciality" />
+			<param name="name" value="DocumentEntryAuthorSpeciality" />
 		</antcall>
 	</target>
 	<target name="3_2.3_ValueSet_DocumentEntry.healthcareFacilityTypeCode" depends="init">
@@ -201,6 +205,7 @@
 			<param name="resourceId" value="DocumentEntry.healthcareFacilityTypeCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.11" />
 			<param name="title" value="DocumentEntry.healthcareFacilityTypeCode" />
+			<param name="name" value="DocumentEntryHealthcareFacilityTypeCode" />
 		</antcall>
 	</target>
 	<target name="3_2.4_ValueSet_DocumentEntry.practiceSettingCode" depends="init">
@@ -208,6 +213,7 @@
 			<param name="resourceId" value="DocumentEntry.practiceSettingCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.18" />
 			<param name="title" value="DocumentEntry.practiceSettingCode" />
+			<param name="name" value="DocumentEntryPracticeSettingCode" />
 		</antcall>
 	</target>
 	<target name="3_2.5_ValueSet_DocumentEntry.classCode" depends="init">
@@ -215,6 +221,7 @@
 			<param name="resourceId" value="DocumentEntry.classCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.3" />
 			<param name="title" value="DocumentEntry.classCode" />
+			<param name="name" value="DocumentEntryClassCode" />
 		</antcall>
 	</target>
 	<target name="3_2.6_ValueSet_DocumentEntry.typeCode" depends="init">
@@ -222,6 +229,7 @@
 			<param name="resourceId" value="DocumentEntry.typeCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.27" />
 			<param name="title" value="DocumentEntry.typeCode" />
+			<param name="name" value="DocumentEntryTypeCode" />
 		</antcall>
 	</target>
 	<target name="SNOMED CT Swiss Extension" depends="init">
@@ -247,6 +255,7 @@
 			<param name="resourceId" value="DocumentEntry.eventCodeList" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.8" />
 			<param name="title" value="DocumentEntry.eventCodeList" />
+			<param name="name" value="DocumentEntryEventCodeList" />
 		</antcall>
 	</target>
 	<target name="3_2.9_ValueSet_DocumentEntry.languageCode" depends="init">
@@ -254,6 +263,7 @@
 			<param name="resourceId" value="DocumentEntry.languageCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.13" />
 			<param name="title" value="DocumentEntry.languageCode" />
+			<param name="name" value="DocumentEntryLanguageCode" />
 		</antcall>
 	</target>
 	<target name="3_2.10_ValueSet_DocumentEntry.sourcePatientInfo.PID-8" depends="init">
@@ -261,6 +271,7 @@
 			<param name="resourceId" value="DocumentEntry.sourcePatientInfo.PID-8" />
 			<param name="templateId" value="2.16.840.1.113883.4.642.3.1" />
 			<param name="title" value="DocumentEntry.sourcePatientInfo.PID-8" />
+			<param name="name" value="DocumentEntrySourcePatientInfoPID8" />
 		</antcall>
 	</target>
 	<target name="3_2.11_ValueSet_DocumentEntry.confidentialityCode" depends="init">
@@ -268,6 +279,7 @@
 			<param name="resourceId" value="DocumentEntry.confidentialityCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.5" />
 			<param name="title" value="DocumentEntry.confidentialityCode" />
+			<param name="name" value="DocumentEntryConfidentialityCode" />
 		</antcall>
 	</target>
 	<target name="3_2.12_ValueSet_DocumentEntry.formatCode" depends="init">
@@ -275,6 +287,7 @@
 			<param name="resourceId" value="DocumentEntry.formatCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.9" />
 			<param name="title" value="DocumentEntry.formatCode" />
+			<param name="name" value="DocumentEntryFormatCode" />
 		</antcall>
 	</target>
 	<target name="ch-ehealth-codesystem-format" depends="init">
@@ -309,6 +322,7 @@
 			<param name="resourceId" value="DocumentEntry.mimeType" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.16" />
 			<param name="title" value="DocumentEntry.mimeType" />
+			<param name="name" value="DocumentEntryMimeType" />
 		</antcall>
 	</target>
 	<target name="3_2.14_ValueSet_SubmissionSet.contentTypeCode" depends="init">
@@ -316,6 +330,7 @@
 			<param name="resourceId" value="SubmissionSet.contentTypeCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.40" />
 			<param name="title" value="SubmissionSet.contentTypeCode" />
+			<param name="name" value="SubmissionSetContentTypeCode" />
 		</antcall>
 	</target>
 	<target name="3_2.15_ValueSet_SubmissionSet.Author.AuthorRole" depends="init">
@@ -323,6 +338,7 @@
 			<param name="resourceId" value="SubmissionSet.Author.AuthorRole" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.41" />
 			<param name="title" value="SubmissionSet.Author.AuthorRole" />
+			<param name="name" value="SubmissionSetAuthorAuthorRole" />
 		</antcall>
 	</target>
 	<target name="3_2.16_ValueSet_DocumentEntry.originalProviderRole" depends="init">
@@ -330,6 +346,7 @@
 			<param name="resourceId" value="DocumentEntry.originalProviderRole" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.42" />
 			<param name="title" value="DocumentEntry.originalProviderRole" />
+			<param name="name" value="DocumentEntryOriginalProviderRole" />
 		</antcall>
 	</target>
 	<target name="5_1_ValueSet_EprPurposeOfUse" depends="init">
@@ -337,6 +354,7 @@
 			<param name="resourceId" value="EprPurposeOfUse" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.2" />
 			<param name="title" value="EprPurposeOfUse" />
+			<param name="name" value="EprPurposeOfUse" />
 		</antcall>
 	</target>
 	<target name="5_2_ValueSet_EprAgentRole" depends="init">
@@ -344,6 +362,7 @@
 			<param name="resourceId" value="EprAgentRole" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.1" />
 			<param name="title" value="EprAgentRole" />
+			<param name="name" value="EprAgentRole" />
 		</antcall>
 	</target>
 	<target name="5_2_ValueSet_EprRole" depends="init">
@@ -351,6 +370,7 @@
 			<param name="resourceId" value="EprRole" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.15.1" />
 			<param name="title" value="EprRole" />
+			<param name="name" value="EprRole" />
 		</antcall>
 	</target>
 	<target name="5_2_ValueSet_EprAuditTrailConsumptionEventType" depends="init">
@@ -358,6 +378,7 @@
 			<param name="resourceId" value="EprAuditTrailConsumptionEventType" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.13.2" />
 			<param name="title" value="EprAuditTrailConsumptionEventType" />
+			<param name="name" value="EprAuditTrailConsumptionEventType" />
 		</antcall>
 	</target>
 	<target name="9_2.1_ValueSet_HCProfessional.hcProfession" depends="init">
@@ -365,6 +386,7 @@
 			<param name="resourceId" value="HCProfessional.hcProfession" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.8.1" />
 			<param name="title" value="HCProfessional.hcProfession" />
+			<param name="name" value="HCProfessionalHcProfession" />
 		</antcall>
 	</target>
 	<target name="9_2.2_ValueSet_HCProfessional.hcSpecialisation" depends="init">
@@ -372,6 +394,7 @@
 			<param name="resourceId" value="HCProfessional.hcSpecialisation" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.8.2" />
 			<param name="title" value="HCProfessional.hcSpecialisation" />
+			<param name="name" value="HCProfessionalHcSpecialisation" />
 		</antcall>
 	</target>
 	
