--- a/ch-epr-/build.xml
+++ b/ch-epr-/build.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <project name="art-decor" basedir="." default="default">
 
-
+<!-- 			<param name="effectiveDate" expression="${effectiveDate}" type="STRING" />  dynamic or like 2022-07-20T19:36:38 -->
+<!-- effectiveDatej for ValueSet 20220720193638-->
 	<target name="init">
 		<mkdir dir="artdecor" />
 		<mkdir dir="resources" />
@@ -56,12 +57,29 @@
 	<target name="getValueSet" depends="init">
 		<get src="http://art-decor.org/fhir/4.0/ch-epr-${version}/ValueSet/${templateId}" dest="artdecor/${templateId}.xml" skipexisting="true" />
 	</target>
+	<target name="getValueSetEffectiveDate" depends="init">
+	    <get src="https://art-decor.org/fhir/ValueSet/${templateId}--${effectiveDate}" dest="artdecor/${templateId}.xml" skipexisting="true"/>
+	</target>
 	<target name="getArtDecorValueSet" depends="init">
-		<get src=" http://art-decor.org/decor/services/RetrieveValueSet?format=xml&amp;prefix=ch-epr-&amp;id=${templateId}&amp;effectiveDate=dynamic" dest="artdecor/${templateId}.xml" skipexisting="true" />
+		<get src=" http://art-decor.org/decor/services/RetrieveValueSet?format=xml&amp;prefix=ch-epr-&amp;id=${templateId}&amp;effectiveDate=${effectiveDate}" dest="artdecor/${templateId}.xml" skipexisting="true" />
 	</target>
 	<target name="transformValueSet" depends="init">
 		<antcall target="getValueSet">
 			<param name="templateId" value="${templateId}" />
+		</antcall>
+		<antcall target="transform">
+			<param name="xsl" value="adaptValueSetToIg.xsl" />
+			<param name="templateId" value="${templateId}" />
+			<param name="resourceId" value="${resourceId}" />
+			<param name="title" value="${title}" />
+			<param name="name" value="${name}" />
+		</antcall>
+		<copy file="output/${resourceId}.xml" tofile="resources/valueset/${resourceId}.xml" />
+	</target>
+	<target name="transformValueSetEffectiveDate" depends="init">
+		<antcall target="getValueSetEffectiveDate">
+			<param name="templateId" value="${templateId}" />
+			<param name="effectiveDate" value="${effectiveDate}" />
 		</antcall>
 		<antcall target="transform">
 			<param name="xsl" value="adaptValueSetToIg.xsl" />
@@ -99,6 +117,21 @@
 		</antcall>
 		<copy file="output/${resourceId}.xml" tofile="resources/codesystem/${resourceId}.xml" />
 	</target>
+	<target name="transformValueSetToCodeSystemEffectiveDate" depends="init">
+		<antcall target="getValueSet">
+			<param name="templateId" value="${templateId}" />
+			<param name="effectiveDate" value="${effectiveDate}" />
+		</antcall>
+		<antcall target="transform">
+			<param name="xsl" value="convertValueSetToCodeSystem.xsl" />
+			<param name="templateId" value="${templateId}" />
+			<param name="resourceId" value="${resourceId}" />
+			<param name="codeSystem" value="${codeSystem}" />
+			<param name="name" value="${name}" />
+			<param name="title" value="${title}" />
+		</antcall>
+		<copy file="output/${resourceId}.xml" tofile="resources/codesystem/${resourceId}.xml" />
+	</target>
 	<target name="transformValueSetsToCodeSystemFor2.16.756.5.30.1.127.3.4" depends="init">
 		<antcall target="getValueSet">
 			<param name="templateId" value="${templateId}" />
@@ -116,6 +149,7 @@
 	<target name="transformValueSetToConceptMap" depends="init">
 			<antcall target="getArtDecorValueSet">
 				<param name="templateId" value="${templateId}" />
+				<param name="effectiveDate" value="dynamic" /> 
 			</antcall>
 			<antcall target="transform">
 				<param name="xsl" value="convertArtDecorValueSetToConceptMap.xsl" />
@@ -283,9 +317,10 @@
 		</antcall>
 	</target>
 	<target name="3_2.12_ValueSet_DocumentEntry.formatCode" depends="init">
-		<antcall target="transformValueSet">
+		<antcall target="transformValueSetEffectiveDate">
 			<param name="resourceId" value="DocumentEntry.formatCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.9" />
+			<param name="effectiveDate" value="20220720193638" />
 			<param name="title" value="DocumentEntry.formatCode" />
 			<param name="name" value="DocumentEntryFormatCode" />
 		</antcall>
@@ -294,6 +329,7 @@
 		<antcall target="transformValueSetToCodeSystem">
 			<param name="resourceId" value="2.16.756.5.30.1.127.3.10.10" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.9" />
+			<param name="effectiveDate" value="20220720193638" />
 			<param name="codeSystem" value="2.16.756.5.30.1.127.3.10.10" />
 			<param name="name" value="ChEhealthCodesystemFormat" />
 			<param name="title" value="ch-ehealth-codesystem-format" />
@@ -465,6 +501,8 @@
 		
 		<antcall target="DocumentEntryClassCodeToDocumentEntryTypeCode" />		
 		<antcall target="HCProfessionalHCProfessionSpecialisationMap" />		
+
+		<antcall target="dist" />		
 
 	</target>
 </project>
