--- a/ch-epr-/build.xml
+++ b/ch-epr-/build.xml
@@ -251,9 +251,10 @@
 		</antcall>
 	</target>
 	<target name="3_2.3_ValueSet_DocumentEntry.healthcareFacilityTypeCode" depends="init">
-		<antcall target="transformValueSet">
+		<antcall target="transformValueSetEffectiveDate">
 			<param name="resourceId" value="DocumentEntry.healthcareFacilityTypeCode" />
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.11" />
+			<param name="effectiveDate" value="20231030134728" /> <!-- 202406.0-stable -->
 			<param name="title" value="DocumentEntry.healthcareFacilityTypeCode" />
 			<param name="name" value="DocumentEntryHealthcareFacilityTypeCode" />
 		</antcall>
@@ -454,9 +455,9 @@
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.1.30" />
 			<param name="title" value="DocumentEntryClassCodeToDocumentEntryTypeCode" />
 			<param name="name" value="DocumentEntryClassCodeToDocumentEntryTypeCode" />
-			<param name="effectiveDate" value="2022-06-26T16:13:56" /> <!-- 202306.0-stable -->
-			<param name="sourceUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/DocumentEntry.classCode" />
-			<param name="targetUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/DocumentEntry.typeCode" />
+			<param name="effectiveDate" value="20230914114715" /> <!-- 202406.0-stable -->
+			<param name="sourceUri" value="http://fhir.ch/ig/ch-term/ValueSet/DocumentEntry.classCode" />
+			<param name="targetUri" value="http://fhir.ch/ig/ch-term/ValueSet/DocumentEntry.typeCode" />
 		</antcall>
 	</target>
 
@@ -466,8 +467,8 @@
 			<param name="templateId" value="2.16.756.5.30.1.127.3.10.8.3" />
 			<param name="title" value="HCProfessionalHCProfessionSpecialisationMap" />
 			<param name="name" value="HCProfessionalHCProfessionSpecialisationMap" />
-			<param name="sourceUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/HCProfessional.hcProfession" />
-			<param name="targetUri" value="http://fhir.ch/ig/ch-epr-term/ValueSet/HCProfessional.hcSpecialisation" />
+			<param name="sourceUri" value="http://fhir.ch/ig/ch-term/ValueSet/HCProfessional.hcProfession" />
+			<param name="targetUri" value="http://fhir.ch/ig/ch-term/ValueSet/HCProfessional.hcSpecialisation" />
 		</antcall>
 	</target>
 		
